# tensorrt-dft-plugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_with_docker.sh  pyproject.toml  setup.py
docker/: Dockerfile  build_image.sh
src/: CMakeLists.txt
src/dft_plugins/: CMakeLists.txt  dft_plugins.cpp
src/trt_dft_plugins/: __init__.py
tests/: test_dft.py
