# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: MIT
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trt-dft-plugins"
version = "1.0"
description = "A collection of TensorRT plugins that implement some of the discrete Fourier transform operators."
readme = "README.md"
authors = [
    {name = "Alexey Kamenev"}
]
classifiers = [
    "Development Status :: Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8"
]

requires-python = "~=3.8"

dependencies = [
    "tensorrt ~= 8.4",
#    "torch ~= 1.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trt_dft_plugins*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests"
]
